# radkit-test-framework

./: AGENTS.md  README.md
example/: package-lock.json  package.json  wdio.conf.ts
example/src/: App.css  App.tsx  api.ts
example/src-tauri/: Cargo.toml  tauri.conf.json
example/src-tauri/capabilities/: default.json
example/src-tauri/src/: lib.rs
example/src/components/: Chat.tsx  RecorderControls.tsx  Settings.tsx  Sidebar.tsx  StateViewer.tsx
example/src/stores/: recorder.ts
example/test/specs/: smoke.e2e.ts
plugin-docs/: README.md  api-reference.md  examples.md  getting-started.md
plugin-docs/guides/: a2a.md  memory.md  streaming.md  tooling.md
tauri-plugin-radkit/: Cargo.toml  README.md  build.rs  package.json
tauri-plugin-radkit/examples/tauri-app/: package.json
tauri-plugin-radkit/examples/tauri-app/src/: App.svelte
tauri-plugin-radkit/examples/tauri-app/src-tauri/: Cargo.toml
tauri-plugin-radkit/examples/tauri-app/src-tauri/capabilities/: default.json
tauri-plugin-radkit/examples/tauri-app/src-tauri/src/: lib.rs
tauri-plugin-radkit/guest-js/: index.ts
tauri-plugin-radkit/permissions/: default.toml
tauri-plugin-radkit/permissions/autogenerated/: reference.md
tauri-plugin-radkit/permissions/autogenerated/commands/: cancel_task.toml  chat.toml  delete_memory.toml  get_task.toml  init_agent.toml  list_tasks.toml  save_memory.toml  search_memory.toml  stream_chat.toml  submit_tool_output.toml
tauri-plugin-radkit/permissions/schemas/: schema.json
tauri-plugin-radkit/src/: chat_skill.rs  commands.rs  desktop.rs  frontend_tool.rs  lib.rs  mobile.rs  models.rs  runtime_holder.rs
tauri-plugin-radkit/tests/: memory_check.rs
