[package]
name = "tauri-plugin-radkit"
version = "0.1.0"
authors = ["Radkit Developers"]
description = "Tauri plugin for Radkit"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-radkit"

[dependencies]
tauri = { version = "2", features = ["unstable"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }

# Radkit dependencies
radkit = { git = "https://github.com/agents-sh/radkit.git", features = ["runtime", "openapi", "mcp"] }
a2a-types = { git = "https://github.com/agents-sh/radkit.git" }
a2a-client = { git = "https://github.com/agents-sh/radkit.git" }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
