[package]
name = "tauri-plugin-radkit"
version = "0.1.0"
authors = ["Radkit Contributors"]
description = "Tauri plugin for Radkit, a Rust SDK for building reliable, A2A-native AI agent systems."
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-radkit"

[dependencies]
tauri = { version = "2", features = ["unstable"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }

# Radkit dependencies
radkit = { version = "0.0.4", features = ["runtime", "openapi", "mcp"] }
a2a-types = "0.1.3"
a2a-client = "0.1.2"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
